[gd_scene load_steps=10 format=3 uid="uid://eh81dl04wjrf"]

[ext_resource type="Script" path="res://UI/BattleUI/battleUI.gd" id="1_ysbu8"]
[ext_resource type="PackedScene" path="res://UI/Worlds/World1/ice_background.tscn" id="2_c5o12"]
[ext_resource type="Texture2D" uid="uid://c5pha03w8f0p7" path="res://UI/BattleUI/Art/TempBackground.png" id="2_umnyg"]
[ext_resource type="PackedScene" uid="uid://d2wps5nmdw8a2" path="res://UI/BattleUI/HealthBars/hp_bar.tscn" id="4_hmane"]
[ext_resource type="Theme" uid="uid://qa8yedffjjhx" path="res://UI/BattleUI/HealthBars/Data/HPBarEnemy.tres" id="5_hb4co"]
[ext_resource type="PackedScene" uid="uid://dulgx6658a325" path="res://UI/TextBoxes/textbox.tscn" id="7_e8dcj"]
[ext_resource type="PackedScene" uid="uid://bjlpulo7gfatv" path="res://UI/Menus/RollMenu/menubox.tscn" id="8_mbkmc"]
[ext_resource type="PackedScene" uid="uid://0fj8tugq6ikh" path="res://Entities/Items/ItemPedestal/item_pedestal.tscn" id="9_tc2ds"]
[ext_resource type="PackedScene" uid="uid://cai3lwh2ndgcv" path="res://UI/Menus/ShopMenu/shop_menu_box.tscn" id="10_14mgv"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ysbu8")

[node name="ItemPedestal" parent="." instance=ExtResource("9_tc2ds")]
visible = false

[node name="IceBackground" parent="." instance=ExtResource("2_c5o12")]
offset = Vector2(45, -15)
scale = Vector2(0.75, 0.75)
transform = Transform2D(0.75, 0, 0, 0.75, 45, -15)

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(240, 135)
texture = ExtResource("2_umnyg")

[node name="PlayerHPBar" parent="." instance=ExtResource("4_hmane")]
layout_mode = 1
offset_left = 102.0
offset_top = 131.0
offset_right = -858.0
offset_bottom = -409.0

[node name="EnemyHPBar" parent="." instance=ExtResource("4_hmane")]
layout_mode = 1
offset_left = 242.0
offset_top = 131.0
offset_right = -718.0
offset_bottom = -409.0
HPBarTheme = ExtResource("5_hb4co")
RightLeft = 1

[node name="Textbox" parent="." instance=ExtResource("7_e8dcj")]

[node name="Menubox" parent="." instance=ExtResource("8_mbkmc")]

[node name="ShopMenuBox" parent="." instance=ExtResource("10_14mgv")]

[connection signal="textFinished" from="Textbox" to="." method="_on_textbox_text_finished"]
[connection signal="optionChosen" from="Menubox" to="." method="_on_menubox_option_chosen"]
[connection signal="optionChosen" from="ShopMenuBox" to="." method="_on_shop_menu_box_option_chosen"]
